--- a/templet/app/index.html
+++ b/templet/app/index.html
@@ -2312,7 +2312,7 @@
                                 <button class="btn btn-falcon-default btn-sm" type="button"><span class="fas fa-plus" data-fa-transform="shrink-3 down-2"></span><span class="d-none d-sm-inline-block ms-1"><a href="{% url 'add_customers' %}">New</a></span></button>
                                 <button class="btn btn-falcon-default btn-sm mx-2" type="button"><span
                                         class="fas fa-filter" data-fa-transform="shrink-3 down-2"></span><span
-                                        class="d-none d-sm-inline-block ms-1">Filter</span></button>
+                                        class="d-none d-sm-inline-block ms-1"><a href="?filter=expensive">Filter</a></span></button>
                                 <button class="btn btn-falcon-default btn-sm" type="button"><span
                                         class="fas fa-external-link-alt"
                                         data-fa-transform="shrink-3 down-2"></span><span
